# tezdev-2023

./: .gitignore  README.md
front/: index.html  package-lock.json  package.json  vite.config.ts
front/src/: App.css  App.tsx
front/src/lib/: hooks.ts
kernel/: Cargo.toml  dac.txt  deploy.sh  inputs.json  simulate.sh  upgrade.sh
kernel/src/: lib.rs  utils.rs
