[package]
name = "tezdev-2023"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tezos-smart-rollup = "0.2.1"
tezos_data_encoding = "0.5.0"
tezos_crypto_rs = { version = "0.5.0", default_features = false}
nom = "7.1.3"
num-bigint = "0.3"